sanitize all user-inputs and url manipulation to prevent XSS attacks